Added distant viewing toolkit

--- a/index.html
+++ b/index.html
@@ -474,6 +474,11 @@
 </ul>
 <div class="fragment">
 <ul>
+<li>The Distant Viewing Lab uses and develops computational techniques to analyze visual culture on a large scale. It develops tools, methods, and datasets that can be re-used by other researchers. <a href="https://www.distantviewing.org/">Project Website</a></li>
+</ul>
+</div>
+<div class="fragment">
+<ul>
 <li><p>Deep Learning</p>
 <ul>
 <li><a href="https://keras.io/">Keras</a></li>
